other/enforce-resources-as-ratio/.chainsaw-test/pods-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox02
      resources:
        requests:
          memory: "100Mi"
        limits:
          memory: "200Mi"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
      resources:
        requests:
          memory: "100Mi"
        limits:
          memory: "250Mi"
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox02
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox02
