other/enforce-resources-as-ratio/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-resources-as-ratio
status:
  ready: true
